# scrapimdb

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
scrapimdb/: __init__.py  spider.py
scrapimdb/tests/: test_spider.py  test_spider_complete.py
tests/: test_scrapimdb.py  test_spider.py
