[tool.poetry]
name = "scrap-imdb"
version = "0.1.6"
description = "Scrap Imdb website to retrieve detail informations from movies or tvshows"
authors = ["David Steinberger <david.steinberger@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/dsteinberger/scrapimdb"
repository = "https://github.com/dsteinberger/scrapimdb"
keywords = ["imdb", "scraper", "movies", "tvshows"]
packages = [{include = "scrapimdb"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^6.0.2"
requests = "^2.32.5"
cloudscraper = "^1.2.71"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.0"
coverage = "^7.12.0"
flake8 = "^7.1.0"
black = "^25.11.0"
ruff = "^0.14.0"
isort = "^7.0.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
tox = "^4.23.0"
bump2version = "^1.0.1"
twine = "^6.2.0"
ipdb = "^0.13.13"
types-requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=scrapimdb --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["scrapimdb"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
